# AstroForge

./: .env.example  .gitignore  LICENSE  PROJECT_STATUS.md  README.md
.github/workflows/: ci.yml
core_api_py/: config.py
core_api_py/app/: __init__.py  decorators.py  routes.py
distribution/: README.md  avvia.bat  avvia.command  docker-compose.yml
docs/: api-spec-python.md  api-spec-rust.md  data-flows.md
infra/: docker-compose.yml
infra/env/: dashboard.env  dashboard.env.example  python.env  python.env.example  rust.env  rust.env.example
infra/scripts/: publish_images.sh  rebuild.sh  start_dev.sh
pricing_engine_rs/src/: main.rs
services/dashboard/: .dockerignore  Dockerfile  requirements.txt
services/dashboard/app/: main.py  theme.py  worker_safety.py
services/dashboard/streamlit_app/: Analysis.py  Asteroids.py  Home.py  Logs.py
services/python-api/: .dockerignore  Dockerfile  requirements.txt
services/python-api/app/: __init__.py  main.py
services/python-api/tests/: test_dto_mapper.py  test_error_handlers.py  test_ingestion.py  test_models.py  test_mongodb.py  test_nasa_client.py  test_pipeline.py  test_routes_logs.py  (+3 more)
services/rust-engine/: Cargo.toml  Dockerfile
services/rust-engine/src/: main.rs  tests.rs
services/rust-engine/src/api/: analyze.rs  asteroid.rs  error.rs  mod.rs
services/rust-engine/src/domain/: asteroid.rs  error.rs  mod.rs  orbit.rs  risk.rs
services/rust-engine/src/dto/: input.rs  mod.rs  output.rs
services/rust-engine/src/logic/: impact_energy.rs  mod.rs  orbit_math.rs
services/rust-engine/src/utils/: mod.rs
(+34 files in other folders)
