[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Middleware
tower-http = { version = "0.6.8", features = ["trace"] }

# Error Handling
thiserror = "2.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"

# .env file loading (mirrors python-dotenv used in python-api)
dotenvy = "0.15"

[dev-dependencies]
# Drives the Axum router directly in tests without opening a real socket
tower = { version = "0.5", features = ["util"] }

